--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "aframe-extras": "^3.2.7",
-    "aframe-fps-look-component": "^0.1.1"
+    "aframe-fps-look-component": "^0.1.1",
+    "aframe-obj-loader-component": "^0.2.0"
   }
 }
