--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "aframe-extras": "^3.2.7",
     "aframe-fps-look-component": "^0.1.1",
-    "aframe-obj-loader-component": "^0.2.0"
+    "aframe-obj-loader-component": "^0.2.0",
+    "aframe-physics-system": "^1.2.1"
   }
 }
