--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vr"
   ],
   "dependencies": {
+    "aframe-animation-component": "^3.2.1",
     "aframe-extras": "^3.2.7",
     "aframe-fps-look-component": "^0.1.1",
     "aframe-obj-loader-component": "^0.2.0",
