--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "aframe-extras": "^3.2.7",
     "aframe-fps-look-component": "^0.1.1",
     "aframe-obj-loader-component": "^0.2.0",
-    "aframe-physics-system": "^1.2.1"
+    "aframe-physics-system": "^1.2.1",
+    "aframe-template-component": "^3.1.3"
   }
 }
